# legiFR2024

./: .gitignore  CHANGELOG  README.md  VERSION  __init__.py  prep.py  pyproject.toml  requirements.dev.txt  requirements.txt  test.ipynb  utils.py
legiFR2024/: __init__.py  prep.py  utils.py
